--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,58 @@
+.circle{
+    height: 400px;
+    width: 400px;
+    border-radius: 100%;
+    margin: 15% 36%;
+    z-index: -100;
+    position: fixed;
+    background-color: #ffb6b9;
+    animation-name: circle_anim;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes circle_anim{
+    from {
+        transform: scale(5)
+    }
+    to {
+        transform: scale(0)
+    }
+}
+
+@keyframes color_change{
+    from {
+        color: #bbded6
+    }
+    to {
+        color: #8ac6d1
+    }
+}
+
 header {
-    background-color: lightpink;
-    width:  75%;
-    padding: 10px;
-    height: 100%;
-    margin: 12%;
-    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    height: 50%;
+    width: 50%;
+    position: absolute;
+    top: 30%;
+    left: 50%;
 }
 
-
-
-body {
-    color:  lightseagreen;
-    font-family: monospace;
+h1 {
+    margin: 0 auto;
+    animation: color_change;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    font-size: 5rem;
 }
-
-
 
 main {
-    text-align: center;
+    height: 5000px;
+}
+
+footer {
+    font-family: 'Montserrat', sans-serif;
+    color: #8ac6d1;
 }
