--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,8 @@ footer{
 @media screen and (max-width: 700px){
     .content{
         position: static;
+        margin: 0;
+        padding: 0;
     }
 
     .top-bar{
@@ -220,11 +222,11 @@ footer{
     }
 
     .content p{
-        font-size: 20px;
+        font-size: 15px;
     }
 
     .email{
-        font-size: 20px;
+        font-size: 15px;
     }
 
     .smaller-text{
