--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,13 @@ footer{
     font-size: 2vw;
 }
 
+.active{
+    animation: color_change;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
 @media screen and (max-width: 700px){
     .content{
         position: static;
@@ -237,6 +244,7 @@ footer{
 
 
 }
+
 
 
 
