--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,12 @@ h2 {
     font-size: 20px;
 }
 
+hr{
+    border: solid 2px #8ac6d1;
+    width: 90%;
+    margin: 30px 0;
+}
+
 .top-bar{
     position: fixed;
     top: 10%;
@@ -154,8 +160,11 @@ h2 {
 }
 
 .pictures img {
-    max-width: 100%;
-    height: auto;
+    max-width: 100%; 
+}
+
+.pictures-vertical{
+    width: 70%;
 }
 
 .pr-image{
@@ -193,6 +202,17 @@ footer{
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+}
+
+.caption{
+    font-family: 'Crimson Text';
+    font-size: 16px;
+    padding-bottom: 20px;
+}
+
+.caption p{
+    margin: 0;
+    padding-left: 0;
 }
 
 @media screen and (max-width: 700px){
