--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,10 @@ footer{
     padding-left: 0;
 }
 
+.exhibition-block{
+    margin: 50px 0;
+}
+
 @media screen and (max-width: 700px){
     .content{
         position: static;
