--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 .home{
     height: 100vh;
     width: 100vw;
-    background-image: url(/artists/img/diegoBarrientos/02/Paintings\ by\ Diego_install-1.jpg);
+    background-image: url(/exhibitions/03/nkg_pres.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
