Added pr, and 04

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 .home{
     height: 100vh;
     width: 100vw;
-    background-image: url();
+    background-image: url(/exhibitions/04/04_wall_frank_TMN.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
